<resources>
    <string name="app_name">Github Lite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slide_two">Get all your Github information on your mobile phone at any time and place.</string>
    <string name="slide_three">All the news and pull requests are provided to you. See whatever your fellow developers are up to.</string>
    <string name="instructions">Click the button below to sign in to Github.</string>
    <string name="slide_four">Chat with your fellow developers and discuss all the code related issues.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_repos">Repos</string>
    <string name="my_repos">My Repos</string>
    <string name="title_profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="activity">Activity</string>
    <string name="title_add_repo">Add Repo</string>
    <string name="add_repo">Fill in the following details to create a new Repo in your Github account. Only the name is necessary, other fields can be empty.</string>
    <string name="name">Name of the Repo *</string>
    <string name="repo_description">The repository description</string>
    <string name="auto_init">Create an initial commit with empty README.</string>
    <string name="create">Create</string>
    <string name="repo_homepage">The homepage URL</string>
    <string name="repo_license">5. Enter the License (eg. mit)</string>
    <string name="name_instructions">1. Enter the name of the repo</string>
    <string name="submit">add</string>
    <string name="description_instructions">2. Enter the description of the repo</string>
    <string name="private_instructions">3. Is the repo private ?</string>
    <string name="next">Next</string>
    <string name="repo_created">Your repo has been successfully created. Happy Coding!</string>
    <string name="ok">Ok</string>
    <string name="client_id">52ae3c62f79bdac0ba67</string>
    <string name="client_secret">46ae345bb463e4e2f288c88a1dc5c4c5bbbc181e</string>
    <string name="redirect_uri">githublite://moose.apps</string>
    <string name="connection">No internet connection detected :(</string>
    <string name="ad_app_id">ca-app-pub-1312043290101038~1826263311</string>
    <string name="logout">Logout</string>
</resources>