<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_repos">

    <fragment
        android:id="@+id/navigation_repos"
        android:name="com.moose.githublite.fragments.repos.ReposFragment"
        android:label="@string/title_repos"
        tools:layout="@layout/fragment_repos" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.moose.githublite.fragments.addRepo.AddRepoFragment"
        android:label="@string/title_add_repo"
        tools:layout="@layout/fragment_add_repo" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.moose.githublite.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>